k8s/manifests/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
  labels:
    app.kubernetes.io/name: todo-app
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: todo-app
    app.kubernetes.io/component: frontend
